--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.18"
   }
 }
